# PyShotter

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE.txt  MIGRATION.md  README.md  RELEASE.md  pyproject.toml  pytest_log.txt  ruff_errors.txt  ruff_output.txt  test_output.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  tests.yml
docs/source/: conf.py  developers.rst  examples.rst  index.rst  installation.rst  support.rst  usage.rst  where.rst
docs/source/examples/: advanced_features_example.py  annotation_example.py  callback.py  change_detection_example.py  complete_demo.py  custom_cls_image.py  fps.py  fps_multiprocessing.py  from_pil_tuple.py  history_example.py  linux_display_keyword.py  ocr_example.py  opencv_numpy.py  panorama_example.py  part_of_screen.py  part_of_screen_monitor_2.py  pil.py  pil_pixels.py  redaction_example.py  sharing_example.py  smart_detection_example.py
examples/: example_ai_redaction.py  example_beautifier.py  example_recording.py
src/pyshotter/: __init__.py  __main__.py  ai_features.py  base.py  beautifier.py  config.py  darwin.py  exception.py  factory.py  features.py  gui.py  gui_components.py  linux.py  logging_config.py  models.py  recording.py  screenshot.py  tools.py  windows.py
src/tests/: bench_bgra2rgb.py  bench_general.py  conftest.py  test_ai_features.py  test_beautifier.py  test_bgra_to_rgb.py  test_cls_image.py  test_config.py  test_find_monitors.py  test_get_pixels.py  test_gnu_linux.py  test_implementation.py  test_issue_220.py  test_leaks.py  test_macos.py  test_recording.py  test_save.py  test_setup.py  test_tools.py  test_windows.py
src/tests/integration/: test_workflows.py
